--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,38 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.viewshine.cloudthree</groupId>
+    <groupId>com.viewshine.cloudthree</groupId>
     <artifactId>ishangexcel</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
     </properties>
 
+    <scm>
+        <url>https://github.com/1997chang/ishangexcel</url>
+        <connection>git@github.com:1997chang/ishangexcel.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>changwei</id>
+            <name>changwei</name>
+            <email>546613470@qq.com</email>
+        </developer>
+    </developers>
+
     <name>ishangexcel</name>
+
+    <!--配置deploy的地址路径-->
+    <distributionManagement>
+        <repository>
+            <id>3rd</id>
+            <url>http://120.78.81.100:8801/repository/nexus-3rd/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
 
@@ -34,7 +56,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
@@ -43,7 +65,6 @@
             <artifactId>cglib</artifactId>
             <version>3.3.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
@@ -58,10 +79,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
