--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.viewshine.cloudthree</groupId>
     <artifactId>ishangexcel</artifactId>
-    <version>1.1.0</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -32,9 +32,14 @@
     <!--配置deploy的地址路径-->
     <distributionManagement>
         <repository>
-            <id>3rd</id>
-            <url>http://120.78.81.100:8801/repository/nexus-3rd/</url>
+            <id>viewshineNexusRelease</id>
+            <url>http://192.168.18.175:8081/nexus/content/repositories/thirdparty/</url>
         </repository>
+
+        <snapshotRepository>
+            <id>viewshineNexusSnapshot</id>
+            <url>http://192.168.18.175:8081/nexus/content/repositories/thirdparty/</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <dependencies>
