--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>com.viewshine.cloudthree</groupId>
     <artifactId>ishangexcel</artifactId>
-    <version>1.5.1</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
+        <poi-version>5.2.3</poi-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
     </properties>
@@ -21,8 +22,8 @@
 
     <developers>
         <developer>
-            <id>changwei</id>
-            <name>changwei</name>
+            <id>moxiao</id>
+            <name>moxiao</name>
             <email>546613470@qq.com</email>
         </developer>
     </developers>
@@ -48,12 +49,13 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>4.1.0</version>
+            <version>${poi-version}</version>
         </dependency>
+        
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>4.1.0</version>
+            <version>${poi-version}</version>
         </dependency>
 
         <!--表示使用HTTPServletResponse下载文件开始-->
@@ -95,6 +97,7 @@
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
